# korus-one-api

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.toml  railway.worker.toml  worker.py
alembic/: env.py
app/: main.py
docs/: assistente-ia-design.md  billing-tokenization.md  notificacoes-in-app-design.md
plans/: README.md
scripts/: ablls_r_item_catalog.py  adl2_item_catalog.py  amiofe_e_item_catalog.py  build_ablls_r_package.py  build_adl2_package.py  build_amiofe_package.py  extract_adl2_protocol_from_pdf.py  repair_whatsapp_fernet.py
tests/: conftest.py  test_abfw_phonology_package.py  test_adl_linguagem_scoring.py  test_admin_billing.py  test_admin_professionals.py  test_admin_protocols_flags.py  test_ai_context.py  test_ai_conversations.py  test_ai_tools.py  test_amiofe_scoring.py  test_anamnese.py  test_app_notifications.py  test_appointment_series.py  test_appointment_whatsapp_events.py  test_assessment_scoring.py  test_assessments_list.py  test_assistant.py  test_attachment_upload.py  test_auth.py  test_auth_hardening.py  test_auth_token_version.py  test_batteries.py  test_battery_evidence_upload.py  test_battery_scoring.py  test_billing.py  test_billing_reconciliation.py  test_billing_webhooks_http.py  test_caregiver_email.py  test_clinical_activity.py  test_dashboard.py  test_debug_production_guard.py  test_demo_patient.py  test_development_analytics.py  test_developmental_scoring.py  test_email_templates.py  test_entitlement_service.py  test_evolution_whatsapp.py  (+24 more)
(+354 files in other folders)
